--- a/references.bib
+++ b/references.bib
@@ -26,3 +26,47 @@
   pages={498--519},
   year={2001}
 }
+@article{allendorf2010genomics,
+  title={Genomics and the future of conservation genetics},
+  author={Allendorf, Fred W and Hohenlohe, Paul A and Luikart, Gordon},
+  journal={Nature reviews genetics},
+  volume={11},
+  number={10},
+  pages={697--709},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+@article{slatkin1981estimating,
+  title={Estimating levels of gene flow in natural populations},
+  author={Slatkin, Montgomery},
+  journal={Genetics},
+  volume={99},
+  number={2},
+  pages={323--335},
+  year={1981},
+  publisher={Genetics Soc America}
+}
+@article{funk1999small,
+  title={Small effective population size in the long-toed salamander},
+  author={Funk, W Chris and Tallmon, David A and Allendorf, Fred W},
+  journal={Molecular Ecology},
+  volume={8},
+  number={10},
+  pages={1633--1640},
+  year={1999},
+  publisher={Wiley Online Library}
+}
+@article{talla2020monarchgenomics,
+author = {Talla, Venkat and Pierce, Amanda A. and Adams, Kandis L. and de Man, Tom J. B. and Nallu, Sumitha and Villablanca, Francis X. and Kronforst, Marcus R. and de Roode, Jacobus C.},
+title = {Genomic evidence for gene flow between monarchs with divergent migratory phenotypes and flight performance},
+journal = {Molecular Ecology},
+volume = {29},
+number = {14},
+pages = {2567-2582},
+keywords = {conservation biology, gene flow, genomics/proteomics, migration, monarch butterfly, population genetics-empirical},
+doi = {https://doi.org/10.1111/mec.15508},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.15508},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/mec.15508},
+abstract = {Abstract Monarch butterflies are known for their spectacular annual migration in eastern North America, with millions of monarchs flying up to 4,500 km to overwintering sites in central Mexico. Monarchs also live west of the Rocky Mountains, where they travel shorter distances to overwinter along the Pacific Coast. It is often assumed that eastern and western monarchs form distinct evolutionary units, but genomic studies to support this notion are lacking. We used a tethered flight mill to show that migratory eastern monarchs have greater flight performance than western monarchs, consistent with their greater migratory distances. However, analysing more than 20 million SNPs in 43 monarch genomes, we found no evidence for genomic differentiation between eastern and western monarchs. Genomic analysis also showed identical and low levels of genetic diversity, and demographic analyses indicated similar effective population sizes and ongoing gene flow between eastern and western monarchs. Gene expression analysis of a subset of candidate genes during active flight revealed differential gene expression related to nonmuscular motor activity. Our results demonstrate that eastern and western monarchs maintain migratory differences despite ongoing gene flow, and suggest that migratory differences between eastern and western monarchs are not driven by select major-effects alleles. Instead, variation in migratory distance and destination may be driven by environmentally induced differential gene expression or by many alleles of small effect.},
+year = {2020}
+}
